syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.stormer.accountservice.grpc.user";
package com.stormer.accountservice.grpc.user;

message User {
  int64 id = 1;
  string name = 2;
  string username = 3;
  string phone_number = 4;
}

message UserRequest {
  string username = 1;
}

service UserService {
  rpc getUserProfile (UserRequest) returns (User);
}